# ROBDD

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  myCmake
src/: Manager.cpp  Manager.h  ManagerInterface.h  main.cpp
src/test/: CMakeLists.txt  Tests.h  main_test.cpp
